--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0"
+    testImplementation 'org.mockito:mockito-core:1.10.19'
 }
